2005-06-21:
	* src/tokens.c(tokens_obtain): don't skip a cell if it's both the
	local/home and in the set of explicitly-specified cells (Jack Neely).

2005-06-20:
	* configure.ac: fix --disable-Werror, --disable-extra-warnings so that
	they actually work as expected.
	* src/shmem.c, src/stash.c, src/storetmp.c: fix compile warnings.

2005-06-17:
	* src/minikafs.c,src/minikafs.h: add a variant of cell_of_file which
	walks up the tree if it fails.
	* src/afs5log.c,src/tokens.c: use the new cell_of_file variant instead
	of handling the logic locally.
	* src/minikafs.c: increase the default size of the address list we
	pass to the whereis pioctl, and make its growth exponential instead of
	linear if we fail with E2BIG (Jack Neely).
	* README: note that we don't re-get tokens if the home directory is in
	the local cell
	* NEWS: note that SAM support hasn't been tested, and that "external"
	isn't limited to use with OpenSSH

2005-05-18:
	* src/afs5log.1: add
	* src/Makefile.am: install afs5log and afs5log.1
	* src/afs5log.c: debug-log when we're obtaining tokens for the local
	or the user's home cell
	* src/minikafs.c(realm_of_cell): debug-log IP->hostname conversion
	* src/minikafs.c(minikafs_5log): rearrange the order of things so that
	we don't always try to determine the realm name ourselves, so that if
	a principal was supplied, we actually can be faster.
	* src/minikafs.c(minikafs_4log): be careful for cases where we may have
	been passed a NULL krb5 context.

2005-05-09:
	* src/minikafs.c(realm_of_cell): debug-log failures in the whereis
	pioctl, stop looking at addresses if we hit 0.0.0.0.
	* src/minikafs.c(minikafs_5log): if realm_of_cell succeeds, don't
	clear the realm name (duh).

2005-05-09:
	* src/minikafs.c: add a wrapper for the ws_cell pioctl.
	* src/tokens.c,src/afs5log.c: use ws_cell to find the default cell
	instead of guessing by doing a cell_of_file on /afs

2005-04-27:
	* src/minikafs.c: also try afs@DEFAULTREALM if the default realm is